syntax = "proto3";
option go_package = "example.com/goproject3";

service Invoicer {
    rpc Create(CreateRequest) returns (CreateResponse);
}
message CreateRequest{
    Amount amount = 1;
    string from = 2;
    string to = 3;
}
message Amount{
    int64 amount = 1;
    string currency = 2;
}
message CreateResponse{
    bytes pdf = 1;
    bytes docx = 2;
    bytes exe = 3;
}